%% Entity Relationship Diagram - Core Domain
%% Database schema for Habitinator core entities

erDiagram
    %% Identity Tables (ASP.NET Core Identity)
    AspNetUsers ||--o{ AspNetUserClaims : "has"
    AspNetUsers ||--o{ AspNetUserLogins : "has"
    AspNetUsers ||--o{ AspNetUserTokens : "has"
    AspNetUsers ||--o{ AspNetUserRoles : "assigned"
    AspNetRoles ||--o{ AspNetUserRoles : "granted"
    AspNetRoles ||--o{ AspNetRoleClaims : "has"
    
    %% Core Application Tables
    AspNetUsers ||--o{ BoardItems : "owns"
    AspNetUsers ||--o{ BoardRequestIdempotencies : "generates"
    AspNetUsers ||--o{ UserActivityEvents : "produces"
    AspNetUsers ||--o{ UserNotificationSettings : "configures"
    
    %% Board Items (Habits, Dailies, To-Dos)
    BoardItems {
        uuid id PK
        string userId FK
        string itemType "Habit|Daily|Todo"
        string title
        string notes
        jsonb checklist
        jsonb tags
        datetime createdAtUtc
        datetime updatedAtUtc
        %% Habit-specific
        boolean showPositive
        boolean showNegative
        %% Daily-specific
        date startDate
        string repeatType
        int repeatInterval
        int streak
        %% Todo-specific
        date dueDate
        boolean completed
    }
    
    %% User Activity (Event Sourcing)
    UserActivityEvents {
        uuid id PK
        string userId FK
        string activityType "Completion|Timer|Streak"
        uuid boardItemId FK
        datetime occurredAtUtc
        jsonb metadata
        int value
    }
    
    %% Outbox Pattern (Local Sync)
    BoardOutboxOperations {
        uuid id PK
        string userId FK
        string kind "Create|Update|Delete"
        string entityType
        jsonb payload
        int attemptCount
        datetime createdAtUtc
        datetime lastAttemptAtUtc
        string errorMessage
    }
    
    %% Idempotency (Exactly-Once Processing)
    BoardRequestIdempotencies {
        uuid id PK
        string userId FK
        string requestKey "UUID hash"
        datetime processedAtUtc
        jsonb responseSnapshot
    }
    
    %% User Settings
    UserNotificationSettings {
        string userId PK
        jsonb settings
        datetime updatedAtUtc
    }
    
    %% Relationships
    AspNetUsers {
        string id PK
        string email
        string userName
        jsonb userPreferencesJson
        datetime createdAt
    }
    
    %% Styling Notes:
    %% - BoardItems uses table-per-hierarchy (TPH) pattern
    %% - UserActivityEvents is append-only (event sourcing)
    %% - BoardOutboxOperations is SQLite-only (MAUI local)
    %% - All timestamps use UTC
